feat: контекст юзера, карт, доступ к удалению карт

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
 @import url(./blocks/element/element.css);
 @import url(./blocks/element/__image/element__image.css);
 @import url(./blocks/element/__delete/element__delete.css);
+@import url(./blocks/element/__delete/_hidden/element__delete_hidden.css);
 @import url(./blocks/element/__panel/element__panel.css);
 @import url(./blocks/element/__panel-text/element__panel-text.css);
 @import url(./blocks/element/__like-group/element__like-group.css);
