--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -8,8 +8,9 @@
   font-weight: 400;
   line-height: 17px;
   padding: 0 0 13px;
+  outline: none;
 }
 
-.popup__input:focus {
+/* .popup__input:focus {
   outline-color: rgb(49, 49, 224);
-}
+} */
